--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "debug": "^2.6.8",
     "eventemitter3": "^2.0.3",
     "moment": "^2.18.1"
+  },
+  "devDependencies": {
+    "uuid": "^3.0.1"
   }
 }
