--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Evan Schwartz <evan@ripple.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "base64url": "^2.0.0",
     "chain-sdk": "^1.2.1",
     "debug": "^2.6.8",
     "eventemitter3": "^2.0.3",
