feat: sendMessage (as transfers)
right now this implements messaging as transfers that the receiver cannot fulfill. that is not a good long-term solution because it is slow and spams the ledger. it does, however, have the advantage of enabling any account on the ledger to send to any other account (which is not the case with something like HTTP RPC)

--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "chain-sdk": "^1.2.1",
     "debug": "^2.6.8",
     "eventemitter3": "^2.0.3",
-    "moment": "^2.18.1"
-  },
-  "devDependencies": {
+    "moment": "^2.18.1",
     "uuid": "^3.0.1"
   }
 }
