--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "^2.6.8",
     "eventemitter3": "^2.0.3",
     "moment": "^2.18.1",
+    "superagent": "^3.5.2",
     "uuid": "^3.0.1"
   }
 }
